Next release
============

* ENH: New mesh.MeshWarpMaths to operate on surface-defined warpings
       (https://github.com/nipy/nipype/pull/1016)
* FIX: Refactor P2PDistance, change name to ComputeMeshWarp, add regression tests,
       fix bug in area weighted distance, and added optimizations
       (https://github.com/nipy/nipype/pull/1016)
* ENH: Add an option not to resubmit Nodes that finished running when using SGEGraph (https://github.com/nipy/nipype/pull/1002)
* FIX: FUGUE is now properly listing outputs. (https://github.com/nipy/nipype/pull/978)
* ENH: Improved FieldMap-Based (FMB) workflow for correction of susceptibility distortions in EPI seqs.
       (https://github.com/nipy/nipype/pull/1019)
* ENH: Dropped support for now 7 years old Python 2.6 (https://github.com/nipy/nipype/pull/1069)
* FIX: terminal_output is not mandatory anymore (https://github.com/nipy/nipype/pull/1070)
* ENH: Added "nipype_cmd" tool for running interfaces from the command line (https://github.com/nipy/nipype/pull/795)
* FIX: Fixed Camino output naming (https://github.com/nipy/nipype/pull/1061)
* ENH: Add the average distance to ErrorMap (https://github.com/nipy/nipype/pull/1039)
* ENH: Inputs with name_source can be now chained in cascade (https://github.com/nipy/nipype/pull/938)
* ENH: Improve JSON interfaces: default settings when reading and consistent output creation
       when writing (https://github.com/nipy/nipype/pull/1047)
* FIX: AddCSVRow problems when using infields (https://github.com/nipy/nipype/pull/1028)
* FIX: Removed unused ANTS registration flag (https://github.com/nipy/nipype/pull/999)
* FIX: Amend create_tbss_non_fa() workflow to match FSL's tbss_non_fa command. (https://github.com/nipy/nipype/pull/1033)
* FIX: remove unused mandatory flag from spm normalize (https://github.com/nipy/nipype/pull/1048)
* ENH: Update ANTSCorticalThickness interface (https://github.com/nipy/nipype/pull/1013)